--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                        
+                                                                                                            
+    
     
     
     
@@ -25,7 +26,8 @@
     
     
     <wb-module deploy-name="Acme-Toolkits-22.1">
-                                                                                                                                                                                                                
+                                                                                                                                                                                                                        
+        
         
         
         
@@ -51,7 +53,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                        
+                                                                                                                                                                                                                
+        
         
         
         
@@ -76,7 +79,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                        
+                                                                                                                                                                                                                
+        
         
         
         
@@ -101,43 +105,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/classes"/>
                                                                                                                                                                                                         
         
         
@@ -162,10 +129,52 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+                                                                                                                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                
+                        
+        
         <property name="context-root" value="Acme-Toolkits"/>
-                                                                                                                                                                                                            
+                                                                                                                                                                                                                    
+    
     
     
     
@@ -191,7 +200,8 @@
     
     
     </wb-module>
-                                                                                                    
+                                                                                                        
+
 
 
 
