--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                            
+                                                                                                                
+    
     
     
     
@@ -26,7 +27,8 @@
     
     
     <wb-module deploy-name="Acme-Toolkits-22.1">
-                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                
+        
         
         
         
@@ -53,7 +55,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                
+                                                                                                                                                                                                                        
+        
         
         
         
@@ -79,7 +82,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                
+                                                                                                                                                                                                                        
+        
         
         
         
@@ -105,45 +109,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
                                                                                                                                                                                                                 
         
         
@@ -169,11 +134,57 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/spam-detector"/>
+                                                                                                                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                        
+                                
+        
         
         <property name="context-root" value="Acme-Toolkits"/>
-                                                                                                                                                                                                                    
+                                                                                                                                                                                                                            
+    
     
     
     
@@ -200,7 +211,8 @@
     
     
     </wb-module>
-                                                                                                        
+                                                                                                            
+
 
 
 
