Task-111: fixed tests that were failing
It also includes a war file generated while trying to do the jar task

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                    
+                                                                                                                                        
+    
     
     
     
@@ -32,7 +33,8 @@
     
     
     <wb-module deploy-name="Acme-Toolkits-22.1">
-                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                
+        
         
         
         
@@ -65,7 +67,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -97,7 +100,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -129,56 +133,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                                                                                                                                                                                                                                                                 
         
         
@@ -210,8 +164,63 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+                                                                                                                                                                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                                                        
+                                                                                
+        
         
         
         
@@ -220,7 +229,8 @@
         
         
         <property name="context-root" value="Acme-Toolkits"/>
-                                                                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                                                            
+    
     
     
     
@@ -253,7 +263,8 @@
     
     
     </wb-module>
-                                                                                                                                
+                                                                                                                                    
+
 
 
 
